# surrealvm

./: Cargo.toml  README.md
src/: commands.rs  error.rs  lib.rs  main.rs
